--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,3 +1,25 @@
-<h1>Welcome</h1>
-<p>Find me in app/views/static/index.html.erb</p>
-<button class='btn btn-primary'>Kioasd</button>
+<div class="jumbotron">
+<div class="panel panel-default">
+  <div class="panel-heading">Математичне моделювання</div>
+  <div class="panel-body">
+    Наш проект починається тут. Поки ви бачиче каркас, але згодом буде і все інше)
+  </div>
+</div>
+<div class="row"></div>
+<div class="row"></div>
+<div class="row"></div>
+<div class="input-group">
+  <span class="input-group-addon">A</span>
+  <input type="text" class="form-control" placeholder="Введіть А">
+</div>
+<div class="row"></div>
+<div class="input-group">
+  <span class="input-group-addon">B</span>
+  <input type="text" class="form-control" placeholder="Введіть B">
+</div>
+<div class="row"></div>
+<div class="input-group">
+  <span class="input-group-addon">C</span>
+  <input type="text" class="form-control" placeholder="Введіть C">
+</div>
+</div>
