--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the static controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body, html {
+    height: 100%;
+}
+
+.jumbotron {
+    padding: 0;
+    margin: 0;
+    height: 100%;
+}
+
+.input-group{
+    margin-bottom: 20px;
+}
